--- a/res/layout/item_list_appointment.xml
+++ b/res/layout/item_list_appointment.xml
@@ -47,11 +47,22 @@
                 android:textColor="@color/black"
                 />
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/tv_patient_name"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/patient_name"
+            android:textSize="@dimen/h5"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/dp_8px"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+            
             <ImageView
                 android:id="@+id/ic_calendar"
                 android:layout_width="wrap_content"
@@ -59,8 +70,8 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="@dimen/dp_4px"
 
-                android:src="@drawable/ic_baseline_calendar_today_24"
-                ></ImageView>
+                android:src="@drawable/ic_baseline_calendar_today_24" />
+
             <TextView
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
