--- a/res/layout/fragment_appointment_add.xml
+++ b/res/layout/fragment_appointment_add.xml
@@ -22,189 +22,171 @@
             android:textSize="@dimen/h5"
             android:textStyle="bold" />
 
-
         <LinearLayout
+            android:id="@+id/ll_date_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
-
-            <TextView
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:id="@+id/btn_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/doctor"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
+                android:src="@drawable/ic_baseline_calendar_today_24"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.1"
 
-            <TextView
+                ></ImageView>
+            <EditText
+                android:id="@+id/tv_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:layout_gravity="center_vertical"
+                android:inputType="none"
+                android:focusable="false"
+
+                android:hint="@string/date"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_time_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_8px"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:id="@+id/btn_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_access_time_24"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.1"
+                ></ImageView>
+            <EditText
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.9"
+                android:layout_gravity="center_vertical"
+                android:inputType="none"
+                android:focusable="false"
+
+                android:hint="@string/time"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/ll_doctor_et"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/dp_8px"
+            android:orientation="horizontal"
+            >
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_baseline_person_24"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.1"
+                ></ImageView>
+            <EditText
                 android:id="@+id/tv_doctor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Doctor" />
+                android:layout_weight="0.9"
+                android:layout_gravity="center_vertical"
+                android:inputType="none"
+                android:focusable="false"
 
+                android:hint="@string/doctor"
+                android:textSize="16sp"
+                />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/ll_specialty_et"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
-
-            <TextView
+            android:orientation="horizontal"
+            >
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/specialty"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
-
-            <TextView
+                android:src="@drawable/ic_baseline_category_24"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="0.1"
+                ></ImageView>
+            <EditText
                 android:id="@+id/tv_doctor_specialty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/specialty" />
+                android:layout_weight="0.9"
+                android:layout_gravity="center_vertical"
+                android:inputType="none"
+                android:focusable="false"
 
+                android:hint="@string/specialty"
+                android:textSize="16sp"
+                />
         </LinearLayout>
 
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_patient_name"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
+            android:background="@color/white"
+            android:hint="@string/patient_name">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/issues"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
+                android:drawableLeft="@drawable/ic_baseline_personal_injury_24"
+                android:drawablePadding="@dimen/drawableleft_padding" />
 
-            <EditText
-                android:id="@+id/et_issue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/issues_desc" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_patient_phone"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
+            android:background="@color/white"
+            android:hint="@string/patient_phone">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/patient_name"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
+                android:drawableLeft="@drawable/ic_baseline_contacts_24"
+                android:drawablePadding="@dimen/drawableleft_padding" />
 
-            <EditText
-                android:id="@+id/et_patient_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/issues_desc" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        </LinearLayout>
-
-        <LinearLayout
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/et_issue"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
+            android:background="@color/white"
+            android:hint="@string/issues">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/patient_phone"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
+                android:drawableLeft="@drawable/ic_baseline_sms_failed_24"
+                android:drawablePadding="@dimen/drawableleft_padding" />
 
-            <EditText
-                android:id="@+id/et_patient_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:hint="@string/issues_desc" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/date"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/date" />
-
-                <ImageView
-                    android:id="@+id/btn_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_menu_my_calendar" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.5"
-                android:text="@string/time"
-                android:textColor="@color/black"
-                android:textSize="@dimen/body" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.5"
-                    android:hint="@string/time" />
-
-                <ImageView
-                    android:id="@+id/btn_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@android:drawable/ic_menu_directions" />
-
-            </LinearLayout>
-
-
-        </LinearLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
