--- a/res/layout/item_list_doctor_add.xml
+++ b/res/layout/item_list_doctor_add.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp_8px"
     android:background="@drawable/border"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="@dimen/dp_16px">
 
     <TextView
@@ -17,7 +17,7 @@
 
         android:text="@string/doctor"
         android:textColor="@color/black"
-        android:textSize="@dimen/h5"
+        android:textSize="@dimen/body"
         android:textStyle="bold" />
 
     <TextView
@@ -28,5 +28,5 @@
 
         android:text="@string/specialty"
         android:textColor="@color/black"
-        android:textSize="@dimen/h5" />
+        android:textSize="@dimen/body" />
 </LinearLayout>
