--- a/res/layout/fragment_doctor_edit.xml
+++ b/res/layout/fragment_doctor_edit.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/dp_16px"
 
-        android:text="@string/add_doctor"
+        android:text="@string/data_doctor"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="@dimen/h5"
@@ -32,7 +32,7 @@
             android:hint="@string/name">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_doctor_add_name"
+                android:id="@+id/et_doctor_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_baseline_person_24"
@@ -55,7 +55,7 @@
             android:hint="@string/specialty">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_doctor_add_specialty"
+                android:id="@+id/et_doctor_specialty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_baseline_category_24"
@@ -77,7 +77,7 @@
             android:hint="@string/contact">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_doctor_add_phone"
+                android:id="@+id/et_doctor_phone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@drawable/ic_baseline_contacts_24"
@@ -102,10 +102,10 @@
             android:text="Cancel" />
 
         <Button
-            android:id="@+id/btn_add_new_doctor"
+            android:id="@+id/btn_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_add_doctor" />
+            android:text="@string/save" />
     </LinearLayout>
 
 
