--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -9,6 +9,7 @@
     android:background="@drawable/border">
 
     <LinearLayout
+        android:id="@+id/ll_doctor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
