--- a/res/layout/fragment_appointment_add.xml
+++ b/res/layout/fragment_appointment_add.xml
@@ -27,29 +27,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/btn_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_calendar_today_24"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.1"
+                android:src="@drawable/ic_baseline_calendar_today_24" />
 
-                ></ImageView>
             <EditText
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
                 android:layout_gravity="center_vertical"
-                android:inputType="none"
+                android:layout_weight="0.9"
                 android:focusable="false"
-
                 android:hint="@string/date"
-                android:textSize="16sp"
-                />
+
+                android:inputType="none"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -57,28 +55,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:id="@+id/btn_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_access_time_24"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.1"
-                ></ImageView>
+                android:src="@drawable/ic_baseline_access_time_24" />
+
             <EditText
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
                 android:layout_gravity="center_vertical"
-                android:inputType="none"
+                android:layout_weight="0.9"
                 android:focusable="false"
-
                 android:hint="@string/time"
-                android:textSize="16sp"
-                />
+
+                android:inputType="none"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -86,27 +83,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_person_24"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.1"
-                ></ImageView>
+                android:src="@drawable/ic_baseline_person_24" />
+
             <EditText
                 android:id="@+id/tv_doctor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
                 android:layout_gravity="center_vertical"
-                android:inputType="none"
+                android:layout_weight="0.9"
                 android:focusable="false"
-
                 android:hint="@string/doctor"
-                android:textSize="16sp"
-                />
+
+                android:inputType="none"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -114,27 +110,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/dp_8px"
-            android:orientation="horizontal"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_baseline_category_24"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="0.1"
-                ></ImageView>
+                android:src="@drawable/ic_baseline_category_24" />
+
             <EditText
                 android:id="@+id/tv_doctor_specialty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.9"
                 android:layout_gravity="center_vertical"
-                android:inputType="none"
+                android:layout_weight="0.9"
                 android:focusable="false"
-
                 android:hint="@string/specialty"
-                android:textSize="16sp"
-                />
+
+                android:inputType="none"
+                android:textSize="16sp" />
         </LinearLayout>
 
         <com.google.android.material.textfield.TextInputLayout
