--- a/res/layout/fragment_doctor.xml
+++ b/res/layout/fragment_doctor.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/dp_16px"
         android:paddingHorizontal="@dimen/dp_24px"
-        android:paddingBottom="@dimen/dp_24px"
-        >
+        android:paddingTop="@dimen/dp_16px"
+        android:paddingBottom="@dimen/dp_24px">
 
         <TextView
             android:id="@+id/tv_daftar_dokter"
@@ -18,11 +18,10 @@
             android:layout_height="wrap_content"
 
             android:text="@string/doctor_list"
-            android:textStyle="bold"
-            android:textColor="@color/black"
             android:textAlignment="center"
+            android:textColor="@color/black"
             android:textSize="@dimen/h5"
-            />
+            android:textStyle="bold" />
 
         <ListView
             android:id="@+id/lst_foods"
@@ -31,19 +30,18 @@
             android:layout_below="@+id/tv_daftar_dokter"
             android:layout_marginTop="@dimen/dp_16px"
             android:divider="@android:color/transparent"
-            android:dividerHeight="@dimen/dp_8px"
-            />
+            android:dividerHeight="@dimen/dp_8px" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_add_doctor"
-            app:elevation="0dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="@dimen/button_margin"
             android:backgroundTint="@color/primaryColor"
-            android:src="@drawable/ic_baseline_add_24_1" />
+            android:src="@drawable/ic_baseline_add_24_1"
+            app:elevation="0dp" />
 
     </RelativeLayout>
 
