--- a/res/layout/fragment_doctor_picker.xml
+++ b/res/layout/fragment_doctor_picker.xml
@@ -4,8 +4,7 @@
     android:id="@+id/ll_picker_doctor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingTop="@dimen/dp_16px"
-    >
+    android:paddingTop="@dimen/dp_16px">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,9 +16,9 @@
             android:layout_height="wrap_content"
 
             android:text="@string/choose_a_doctor"
-            android:textSize="@dimen/h6"
             android:textAlignment="center"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textSize="@dimen/h6" />
 
         <SearchView
             android:id="@+id/search_bar"
@@ -31,15 +30,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="400dp">
+
             <ListView
                 android:id="@+id/lst_picker_doctor"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/dp_16px"
-                android:paddingHorizontal="@dimen/dp_16px"
                 android:divider="@android:color/transparent"
                 android:dividerHeight="@dimen/dp_8px"
-                />
+                android:paddingHorizontal="@dimen/dp_16px" />
         </LinearLayout>
 
     </LinearLayout>
