--- a/res/layout/fragment_onboarding.xml
+++ b/res/layout/fragment_onboarding.xml
@@ -2,24 +2,24 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <RelativeLayout
         android:id="@+id/lyt_onboarding_upper"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="@dimen/dp_16px"
         android:paddingHorizontal="@dimen/dp_24px"
-        android:paddingBottom="@dimen/dp_24px"
-        >
-       <ImageView
-           android:layout_width="160dp"
-           android:layout_height="160dp"
-           android:layout_centerHorizontal="true"
-           android:layout_above="@+id/tv_onboarding_subtitle"
-           android:layout_marginBottom="@dimen/dp_8px"
-           android:src="@drawable/ic_logo_rsck"
-           ></ImageView>
+        android:paddingTop="@dimen/dp_16px"
+        android:paddingBottom="@dimen/dp_24px">
+
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_above="@+id/tv_onboarding_subtitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="@dimen/dp_8px"
+            android:src="@drawable/ic_logo_rsck" />
+
         <TextView
             android:id="@+id/tv_onboarding_subtitle"
             android:layout_width="match_parent"
@@ -29,9 +29,8 @@
 
             android:text="@string/tv_onboarding_subtitle"
             android:textAlignment="center"
-            android:textSize="@dimen/h5"
             android:textColor="@color/black"
-            ></TextView>
+            android:textSize="@dimen/h5" />
 
         <Button
             android:id="@+id/btn_onboarding_buat_pertemuan"
@@ -40,6 +39,6 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
 
-            android:text="@string/btn_onboarding_buat_pertemuan"></Button>
+            android:text="@string/btn_onboarding_buat_pertemuan" />
     </RelativeLayout>
 </FrameLayout>
