--- a/res/layout/item_list_appointment.xml
+++ b/res/layout/item_list_appointment.xml
@@ -5,65 +5,64 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp_8px"
-    android:padding="@dimen/dp_16px"
-    android:orientation="horizontal"
     android:background="@drawable/border"
-    >
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_16px">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_weight="0.9"
-        >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/dp_8px"
-            >
+            android:layout_marginBottom="@dimen/dp_8px">
+
             <TextView
                 android:id="@+id/tv_doctor_name"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
 
                 android:text="@string/doctor"
-                android:textSize="@dimen/h5"
                 android:textColor="@color/black"
-                android:textStyle="bold"
-                />
+                android:textSize="@dimen/h5"
+                android:textStyle="bold" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginHorizontal="@dimen/dp_4px"
 
                 android:text="@string/stripe"
-                android:textSize="@dimen/h5"
-                ></TextView>
+                android:textSize="@dimen/h5" />
+
             <TextView
                 android:id="@+id/tv_doctor_specialty"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
 
                 android:text="@string/specialty"
-                android:textSize="@dimen/h5"
                 android:textColor="@color/black"
-                />
+                android:textSize="@dimen/h5" />
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_patient_name"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/dp_8px"
             android:text="@string/patient_name"
-            android:textSize="@dimen/h5"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_marginBottom="@dimen/dp_8px"/>
+            android:textSize="@dimen/h5"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            
+
             <ImageView
                 android:id="@+id/ic_calendar"
                 android:layout_width="wrap_content"
@@ -81,17 +80,17 @@
                 android:gravity="center_vertical"
 
                 android:text="@string/tanggal"
-                android:textSize="@dimen/subtitle"
                 android:textColor="@color/black"
-                ></TextView>
+                android:textSize="@dimen/subtitle" />
+
             <ImageView
                 android:id="@+id/ic_jam"
                 android:layout_width="wrap_content"
                 android:layout_height="32dp"
                 android:layout_marginRight="@dimen/dp_4px"
 
-                android:src="@drawable/ic_baseline_access_time_24"
-                ></ImageView>
+                android:src="@drawable/ic_baseline_access_time_24" />
+
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="match_parent"
@@ -99,11 +98,11 @@
                 android:gravity="center_vertical"
 
                 android:text="@string/jam"
-                android:textSize="@dimen/subtitle"
                 android:textColor="@color/black"
-                ></TextView>
+                android:textSize="@dimen/subtitle" />
         </LinearLayout>
     </LinearLayout>
+
     <ImageView
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
@@ -111,6 +110,5 @@
         android:layout_gravity="center"
         android:layout_weight="0.1"
 
-        android:src="@drawable/ic_baseline_delete_36"
-        />
+        android:src="@drawable/ic_baseline_delete_36" />
 </LinearLayout>
