--- a/res/layout/item_list_doctor.xml
+++ b/res/layout/item_list_doctor.xml
@@ -3,17 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="@dimen/dp_16px"
     android:layout_marginBottom="@dimen/dp_24px"
-    android:background="@drawable/border">
+    android:background="@drawable/border"
+    android:orientation="horizontal"
+    android:padding="@dimen/dp_16px">
 
     <LinearLayout
         android:id="@+id/ll_doctor"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="0.9">
+        android:layout_weight="0.9"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,8 +26,8 @@
                 android:layout_height="match_parent"
 
                 android:text="@string/doctor"
-                android:textSize="@dimen/h5"
                 android:textColor="@color/black"
+                android:textSize="@dimen/h5"
                 android:textStyle="bold" />
 
             <TextView
@@ -36,7 +36,7 @@
                 android:layout_marginHorizontal="@dimen/dp_4px"
 
                 android:text="@string/stripe"
-                android:textSize="@dimen/h5"/>
+                android:textSize="@dimen/h5" />
 
             <TextView
                 android:id="@+id/tv_doctor_specialty"
@@ -44,8 +44,8 @@
                 android:layout_height="match_parent"
 
                 android:text="@string/specialty"
-                android:textSize="@dimen/h5"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:textSize="@dimen/h5" />
 
         </LinearLayout>
 
@@ -58,9 +58,9 @@
                 android:id="@+id/ic_phone"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_marginRight="@dimen/dp_4px"
                 android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_baseline_call_24"/>
+                android:layout_marginRight="@dimen/dp_4px"
+                android:src="@drawable/ic_baseline_call_24" />
 
             <TextView
                 android:id="@+id/tv_phone_number"
@@ -69,12 +69,13 @@
                 android:gravity="center_vertical"
 
                 android:text="@string/nomor_telpon"
-                android:textSize="@dimen/subtitle"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black"
+                android:textSize="@dimen/subtitle" />
 
         </LinearLayout>
 
     </LinearLayout>
+
     <ImageView
         android:id="@+id/btn_delete"
         android:layout_width="wrap_content"
@@ -82,6 +83,5 @@
         android:layout_gravity="center"
         android:layout_weight="0.1"
 
-        android:src="@drawable/ic_baseline_delete_36"
-        />
+        android:src="@drawable/ic_baseline_delete_36" />
 </LinearLayout>
